# pybind11-stubgen

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  pybind11_stubgen.py  requirements-dev.txt  setup.py  travis.yml
.github/workflows/: ci.yml  deploy.yml
pybind11_stubgen/: __init__.py  __main__.py  printer.py  structs.py  typing_ext.py  utils.py  writer.py
pybind11_stubgen/parser/: errors.py  interface.py
pybind11_stubgen/parser/mixins/: error_handlers.py  filter.py  fix.py  parse.py
test/: .gitignore  compare_walker.py  run_test.sh  test_free_functions.py
test/stubs/expected/cpp_library_bindings/: __init__.pyi
test/test_modules/python3_module/: __init__.py
test/test_modules/python3_module/classes/: __init__.py  base_derived.py  foobar.py
test/test_modules/python3_module/exceptions/: __init__.py
test/test_modules/python3_module/free_functions/: __init__.py
test/test_modules/python3_module/global_objects/: __init__.py
tests/: .gitignore  README.md  check-demo-errors-generation.sh  check-demo-stubs-generation.sh  compare_walker.py  demo.errors.stderr.txt  install-demo-module.sh  run-tests.sh  run_test.sh  test_alias_class.py
tests/demo-lib/: .gitignore  CMakeLists.txt  DemoConfig.cmake
tests/demo-lib/include/demo/: Foo.h  Inheritance.h  NestedClasses.h
tests/demo-lib/include/demo/sublibA/: ConsoleColors.h  add.h
tests/demo-lib/src/: Foo.cpp
tests/demo-lib/src/sublibA/: add.cpp
tests/py-demo/: README.rst  pyproject.toml  setup.py
tests/py-demo/bindings/: CMakeLists.txt
tests/py-demo/bindings/src/: main.cpp  modules.h  opaque_types.h
tests/py-demo/bindings/src/modules/: aliases.cpp  classes.cpp  duplicate_enum.cpp  eigen.cpp  enum.cpp  flawed_bindings.cpp  functions.cpp  issues.cpp  methods.cpp  numpy.cpp  properties.cpp  stl.cpp  stl_bind.cpp  typing.cpp  values.cpp
tests/py-demo/demo/: __init__.py  core.py
tests/py-demo/demo/pure_python/: __init__.py  classes.py  functions.py  functions_3_8_plus.py  functions_3_9_plus.py  values.py
tests/pybind11-project-example/: .gitmodules  CMakeLists.txt  README.rst  setup.py
tests/pybind11-project-example/cpp_library_bindings/: CMakeLists.txt
tests/pybind11-project-example/cpp_library_bindings/_core/: cpp_library.cpp
tests/pybind11-project-example/include/cpp_library/: Foo.h  Inheritance.h  NestedClasses.h
tests/pybind11-project-example/include/cpp_library/sublibA/: ConsoleColors.h  add.h
tests/pybind11-project-example/src/: Foo.cpp
tests/pybind11-project-example/src/sublibA/: add.cpp
tests/stubs/demo/: __init__.pyi
tests/stubs/demo/_bindings/: stl.pyi  (+7 more)
tests/stubs/python-3.10/: pybind11-master
tests/stubs/python-3.12/: requirements.txt
tests/stubs/python-3.6/: requirements.txt
tests/stubs/python-3.7/: requirements.txt
tests/stubs/python-3.8/: requirements.txt
(+156 files in other folders)
